[CORE-1450] Addressing SonarQube (Major) issue - fixing java:S6204 (use Stream.toList() instead of collect(Collectors.toList()))
Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01VrCPMiMY5FsZrEW8jCWwfs